# mcp-guard

./: .gitignore  AGENTS.md  README.md  push-test.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: risk_taxonomy.md  roadmap.md  threat_model.md
examples/: arbitrary_file_read_manifest.json  arbitrary_file_write_manifest.json  credential_env_mcp_config.json  dangerous_shell_tool_manifest.json  dangerous_stdio_config.json  fixture_matrix.yaml  network_exfil_tool_manifest.json  overbroad_schema_manifest.json  poisoned_readme.md  poisoned_tool_manifest.json  policy_example.yaml  rug_pull_baseline.json  rug_pull_changed.json  safe_mcp_config.json  safe_readonly_docs_manifest.json
src/mcp_guard/: __main__.py  benchmark.py  cli.py  diff.py  hashing.py  models.py  policy.py  redaction.py  risk.py  scanner.py  standards.py  summary.py
src/mcp_guard/parsers/: __init__.py  config.py  manifest.py
src/mcp_guard/reports/: __init__.py  json_report.py  markdown_report.py  sarif_report.py
src/mcp_guard/rules/: __init__.py  base.py  catalog.py  config_rules.py  schema_rules.py  text_patterns.py
tests/: test_benchmark.py  test_cli.py  test_config_parser.py  test_hash_diff.py  test_manifest_parser.py  test_no_exec.py  test_policy.py  test_reports.py  test_risk.py  test_rules.py
